fixed button for now, spacing issues

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -106,3 +106,8 @@ img {
 	padding: 1px 0 50px 0;
 	margin-top: 40px;
 }
+
+.backProjects {
+	text-align: center;
+	margin: 80px;
+}
