--- a/src/styles/_projects.scss
+++ b/src/styles/_projects.scss
@@ -112,4 +112,11 @@
 			}
 		}
 	}
+	#references {
+		margin-top: 50px;
+		 a {
+			color: $purple;
+			text-decoration: underline;
+		 }
+	}
 }
